# lprng

./: .gitignore  ABOUT-NLS.LPRng  ANNOUNCE  Artistic.license  BUILD  CHANGES  CHANGES.OLD  CONTRIBUTORS  COPYRIGHT  CREATE_CONFIGURE  ChangeLog  Commercial.license  DOWNDATE  FINDLPR  INFORMATION  INSTALL  KERBEROS_configuration  LICENSE  LINK  MIRRORS  MIT_configure  Makefile  Makefile.am  Makefile.bsd.in  Makefile.in  NEWS  OPTIONS.IPP  README  README.1st  README.HOWTO  README.LPRng_to_lpr_spooling  README.SSL.SECURITY  README.accounting  README.authentication  README.banner  README.bouncequeues  README.deskjet  README.install  README.kerberos_authentication  README.klprPDE  (+54 more)
DISTRIBUTIONS/: FreeBSD-4.ports.sysutils.LPRng  Makefile,v  Makefile.in
DISTRIBUTIONS/FreeBSD-4.ports.systutils.LPRng/: Makefile  Makefile.build  README.html  UNPACK  distinfo  files-pkg-message  pkg-deinstall  pkg-descr  pkg-install  pkg-message  pkg-plist
DISTRIBUTIONS/FreeBSD-4.ports.sysutils.LPRng/: Makefile  Makefile.build  README.html  distinfo  pkg-deinstall  pkg-descr  pkg-install  pkg-plist
DISTRIBUTIONS/LPRng/: Makefile  Makefile.build  distinfo  files-pkg-message  pkg-deinstall  pkg-install  pkg-message  pkg-plist
DISTRIBUTIONS/RPM.RedHat/: LPRng.spec  LPRng_rh.spec.header  Makefile
DISTRIBUTIONS/Solaris.pkg/: Makefile
DOC/: Install.ps  Install.txt  Intro.ps  Intro.txt  LPRng-LISA95.ps  Makefile  README  Tutorial.ps  Tutorial.txt  Using_stty.txt
DOC/Install/: Install.nroff  Makefile
DOC/Intro/: Intro.f2  Intro.f4  Intro.f5  Intro.f8  Intro.f8a  Intro.f8b  Intro.f8c  Intro.f9  Intro.nroff  Makefile
DOC/Macros/: Makefile  tmac.usenix  using.tmac.usenix
DOC/Tutorial/: Makefile  Tutorial.01.nrf  Tutorial.02.nrf  Tutorial.03.nrf  Tutorial.04.nrf  Tutorial.05.nrf  Tutorial.06.nrf  Tutorial.07.nrf
DOCS/: CHANGES  LPRng-Reference.html  LPRng-Reference.sgml  Makefile.in
DOCS/LPRng-Reference-Multipart/: abnormalterm.htm  accountingref.htm  ah.htm  aix.htm  allowusersetting.htm  append-z.htm  appletalk.htm  appsocket.htm  auth.htm  authref.htm  bannerprinting.htm  bk.htm  chainingfilters.htm  checkfornonprintable.htm  checkpc.htm  classpriority.htm  cm.htm  configfile.htm  controllingprintqueue.htm  debugging.htm  defaultrmrp.htm  destinations.htm  exitcodes.htm  f38.htm  faq.htm  faqref.htm  filteroptions.htm  filters.htm  forcefqdnhostname.htm  forcelocalhost.htm  i11811.htm  i11827.htm  i11828.htm  ifhp.htm  index.htm  installation.htm  introduction.htm  jobcompletion.htm  jobcopies.htm  jobfileformatconversion.htm  (+339 more)
FreeBSD.ports.sysutils/: README
FreeBSD.ports.sysutils/LPRng/: Makefile  README.html
HOWTO/: CHANGES  LICENSE  LPRng-HOWTO-1.html  LPRng-HOWTO-10.html  LPRng-HOWTO-11.html  LPRng-HOWTO-12.html  LPRng-HOWTO-13.html  LPRng-HOWTO-14.html  LPRng-HOWTO-15.html  LPRng-HOWTO-16.html  LPRng-HOWTO-17.html  LPRng-HOWTO-18.html  LPRng-HOWTO-19.html  LPRng-HOWTO-2.html  LPRng-HOWTO-20.html  LPRng-HOWTO-21.html  LPRng-HOWTO-3.html  LPRng-HOWTO-4.html  LPRng-HOWTO-5.html  LPRng-HOWTO-6.html  LPRng-HOWTO-7.html  LPRng-HOWTO-8.html  LPRng-HOWTO-9.html  LPRng-HOWTO.Bex  LPRng-HOWTO.aux  LPRng-HOWTO.dvi  LPRng-HOWTO.html  LPRng-HOWTO.info  LPRng-HOWTO.ps  LPRng-HOWTO.sgml  LPRng-HOWTO.toc  LPRng-HOWTO.txt  LPRng.html  Makefile  Makefile.bsd.in  Makefile.in  REDIRECT.LPRng.html  collateindex.pl  dict  fixoptions  (+11 more)
HOWTO/LPRng-HOWTO-Multipart/: abnormalterm.htm  accountingref.htm  ah.htm  aix.htm  allowusersetting.htm  append-z.htm  appletalk.htm  appsocket.htm  auth.htm  authref.htm  bannerprinting.htm  bk.htm  chainingfilters.htm  checkfornonprintable.htm  checkpc.htm  classpriority.htm  cm.htm  configfile.htm  controllingprintqueue.htm  debugging.htm  defaultrmrp.htm  destinations.htm  exitcodes.htm  f37.htm  f38.htm  faq.htm  faqref.htm  filteroptions.htm  filters.htm  forcefqdnhostname.htm  forcelocalhost.htm  i11384.htm  i11426.htm  i11427.htm  i11441.htm  i11480.htm  i11485.htm  i11496.htm  i11504.htm  i11634.htm  (+772 more)
LP_SIMULATION/: Makefile  README  lp.sh  lpstat.pl
PrintingCookbook/HTML/: index.html
PrintingCookbook/source/: Cookbook.html  Cookbook.htmp  Cookbook.sgml  Cookbook.sgml,v  Makefile  Makefile.pic  chooser.eps  clients.eps  filter.eps  (+13 more)
RPM/: LPRng_rh.spec
Solaris.pkg/: LPRng.init  Makefile  Makefile.bsd.in  README  pkginfo  postinstall  prototype  prototype.proto
TESTSUPPORT/: Makefile.bsd.in  Makefile.in  chooser.sh  clearlog  common.conf.proto  dbserver.sh  filter  filter.sh  lpd.conf.proto  lpd.perms.proto  lpd_printcap.proto  makedb  printcap.proto  router.sh
UTILS/: LPRng.pm  LPRng.pm.in  MAKEPATCH  Makefile  Makefile.bsd.in  Makefile.in  README  accnt  accounting.pl  accounting.pl.in  acct  atalkprint  banner.sh  banner.sh_init  change_include  cheap_lpq  cheap_lpq.in  cheap_lpr  cheap_lpr.in  cheap_lprm  cheap_lprm.in  checkinclude  checkmd5.c  clearlog  dochange  fdtype  fdtype.c  fixid  fixinclude  fixupdate  fixupdate.in  geterrs  hasinclude  header  killit  linetest.c  make_lpd_conf  make_lpd_conf.in  make_printcap_use  makeinc  (+14 more)
autom4te.cache/: output.0  requests  traces.0
conf/: Makefile.am  Makefile.in  init.debian  lpd.perms.in  printcap
intl/: Makefile  Makefile.in,v  linux-msg.sed  linux-msg.sed,v
man/: Makefile.am  Makefile.bsd.in  Makefile.in  a  authenticate_pgp.1  cancel.1  checkpc.8  checkpc.n  lp.1  lp.n  lpbanner.1  lpbanner.n  lpc.1  lpc.8  lpc.n  lpd.8  lpd.conf.5  lpd.conf.n  lpd.n  lpd.perms.5  lpd.perms.n  lpf.1  lpf.n  lpq.1  lpq.n  lpr.1  lpr.n  lpraccnt.1  lprm.1  lprm.n  lprng_certs.n  lprng_index_certs.n  lpstat.1  lpstat.n  monitor.1  monitor.n  pclbanner.1  pclbanner.n  plp_snprintf.3  printcap.5  (+4 more)
po/: ChangeLog  LPRng.pot  Makefile  Makefile.am  Makefile.bsd.in  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  fr.gmo  fr.gmo.po  fr.mo  fr.po  pl.gmo  pl.po  vi.gmo  vi.po
src/: Makefile.am  Makefile.am.orig  Makefile.bsd.in  Makefile.in  Memoryleak  acct  cheap_lpr  deps.d  fixupdate  log  lprng_certs.sh  make_lpd_conf  make_printcap_use  monitor  pclbanner.in  root.hints.new  vars.c
(+340 files in other folders)
